chore: env 세팅 및 아이콘 경로 지정

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,10 @@ flutter:
   uses-material-design: true
 
   assets:
+    - .env
     - assets/images/
     - assets/icons/
+    - assets/icons/bn_icons/
 
   fonts:
     - family: Pretendard
