--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
   change_app_package_name: ^1.5.0
+  flutter_launcher_icons: ^0.14.3
 
 flutter:
   uses-material-design: true
