feat: google Oauth를 위한 json, plist 추가

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,16 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<!-- google login -->
+			<string>com.googleusercontent.apps.79595153500-ncp5ro72k6c3pvcu5ssu1k6k7nk1eo9n</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
