--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
