--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   flutter_riverpod: ^2.6.1
   flutter_svg: ^2.0.17
   google_sign_in: ^6.3.0
+  dio: ^5.8.0+1
+  sign_in_with_apple: ^7.0.1
 
 dev_dependencies:
   flutter_test:
