fix: project 이름 변경

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: ylj_flutter
-description: "ylj flutter project"
+name: pomato_flutter
+description: "pomato project"
 publish_to: "none"
 
 version: 1.0.0+1
